--- a/lab2/Homework.ipynb
+++ b/lab2/Homework.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,16 +29,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f060c13f110>"
+       "<matplotlib.image.AxesImage at 0x7fc4b84e0350>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -75,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "(<Axes: >, <matplotlib.image.AxesImage at 0x7f060c221ad0>)"
+       "(<Axes: >, <matplotlib.image.AxesImage at 0x7fc4b86caf50>)"
       ]
      },
      "execution_count": 3,
@@ -122,16 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<Axes: >, <matplotlib.image.AxesImage at 0x7f06020277d0>)"
+       "(<Axes: >, <matplotlib.image.AxesImage at 0x7fc4b85ae050>)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -185,16 +185,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(<Axes: >, <matplotlib.image.AxesImage at 0x7f06024959d0>)"
+       "(<Axes: >, <matplotlib.image.AxesImage at 0x7fc4b84d8350>)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
